// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterNavHeader component renders default footer correctly 1`] = `
<Styled(BodyCopy)
  aria-label="ABCD"
  className="footer-nav-header1"
  color="text.primary"
  component="p"
  data-index={2}
  data-locator="col_heading_2"
  fontFamily="secondary"
  fontSize="fs16"
  fontWeight="semibold"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  Title
</Styled(BodyCopy)>
`;

exports[`FooterNavHeader component renders image in header variation correctly 1`] = `
<Connect(Component)
  aria-label="Title"
  as={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  font-family: ",
          [Function],
          ";
  color: inherit;

  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";
  ",
          [Function],
          ";

  .left-arrow {
    border: solid ",
          [Function],
          ";
    border-width: 0 2px 2px 0;
    display: inline-block;
    padding: 5px;
    transform: rotate(135deg);
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(Anchor)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  className="footer-nav-header img-link"
  clickData={
    Object {
      "eventName": "loyaltyclick",
      "pageSection": "home page",
      "pageSubSection": "home page",
      "pageType": "home page",
    }
  }
  dataLocator="col_heading_3"
  to=""
>
  <Styled(Image)
    aria-hidden="true"
    tabIndex="-1"
  />
</Connect(Component)>
`;

exports[`FooterNavHeader component renders subheader variation correctly 1`] = `
<Styled(BodyCopy)
  aria-label="ABCD"
  className="footer-nav-header2 subHeader"
  color="text.primary"
  component="p"
  data-index={4}
  data-locator="col_heading_4"
  fontFamily="secondary"
  fontSize="fs16"
  fontWeight="semibold"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  Title
</Styled(BodyCopy)>
`;
